--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,12 @@ dependencies:
   intl: ^0.17.0
 
 dev_dependencies:
+
+  change_app_package_name: ^1.1.0
   flutter_test:
     sdk: flutter
+
+
 
 flutter:
   uses-material-design: true
