--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: "12.x"
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
       - uses: subosito/flutter-action@v1
         with:   
           channel: "stable"
