--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,23 @@
-name: CI
-on:
-  pull_request:
-    branches:
-      - main
+# name: CI
+# on:
+#   pull_request:
+#     branches:
+#       - main
 
 
-jobs:
-  flutter_test:
-    name: Run flutter test and Analyze
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin' # See 'Supported distributions' for available options
-          java-version: '17'
-      - uses: subosito/flutter-action@v1
-        with:   
-          channel: "stable"
-      - run: flutter pub get  
-      - run: flutter analyze
-      - run: flutter test
+# jobs:
+#   flutter_test:
+#     name: Run flutter test and Analyze
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-java@v3
+#         with:
+#           distribution: 'temurin' # See 'Supported distributions' for available options
+#           java-version: '17'
+#       - uses: subosito/flutter-action@v1
+#         with:   
+#           channel: "stable"
+#       - run: flutter pub get  
+#       - run: flutter analyze
+#       - run: flutter test
