--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,22 +15,28 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v2
         with:
-          distribution: 'temurin' # See 'Supported distributions' for available options
-          java-version: '11.0.15+10'
+          java-version: '12.x'
       - uses: subosito/flutter-action@v1
-        with:   
-            channel: "stable"
-      - run: flutter pub get  
-      - run: flutter build apk --debug --split-per-abi  
+        with:
+          flutter-version: '2.2.0'
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build apk --debug --split-per-abi
+      - run: |
+          flutter build ios --no-codesign
+          cd build/ios/iphoneos
+          mkdir Payload
+          cd Payload
+          ln -s ../Runner.app
+          cd ..
+          zip -r app.ipa Payload
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/apps/outputs/apk/debug/*"
+          artifacts: "build/app/outputs/apk/debug/*,build/ios/iphoneos/app.ipa"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-        
-        
 
 #gets trigger on pull request or push to master/main branch
