--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v3
         with:
-          java-version: '12.x'
+          distribution: 'temurin'
+          java-version: '11'
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '2.2.0'
