--- a/.github/workflows/ios_CI_CD_TEST.yml
+++ b/.github/workflows/ios_CI_CD_TEST.yml
@@ -9,13 +9,13 @@ on:
 jobs:
   build_ios:
     runs-on: macos-latest
-    env:
-      SHEME: Runner
-      BUILD_CONFIGURATION: Release
+     
 
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
+      - name: pod Install
+        run: pod install
 
       - name: Install the Apple certificate and provisioning profile
         env:
@@ -23,6 +23,8 @@ jobs:
           P12_PASSWORD: ${{ secrets.IOS_PROD_CERTIFICATE_PASSWORD }}
           BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.IOS_PROVISION_PRODUCTION }}
           KEYCHAIN_PASSWORD: ${{ secrets.IOS_PROD_CERTIFICATE_PASSWORD }}
+          SHEME: Runner
+          BUILD_CONFIGURATION: Release
         run: |
           # create variables
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
@@ -73,7 +75,7 @@ jobs:
 
       - name: Build xArchive
         run: |
-          xcodebuild -workspace ios/Runner.xcworkspace -scheme ${{ env.SHEME }} -configuration ${{ env.BUILD_CONFIGURATION }} DEVELOPMENT_TEAM=${{ env.TEAM_ID }} -sdk 'iphoneos' -destination 'generic/platform=iOS' -archivePath build-output/app.xcarchive PROVISIONING_PROFILE=106bdc42-25d3-4f77-a431-e69c56fc0b49 clean archive CODE_SIGN_IDENTITY="Apple Distribution: Damien Aicheh"
+          xcodebuild -workspace ios/Runner.xcworkspace -scheme ${{ env.SHEME }} -configuration ${{ env.BUILD_CONFIGURATION }} DEVELOPMENT_TEAM=${{ env.TEAM_ID }} -sdk 'iphoneos' -destination 'generic/platform=iOS' -archivePath build-output/app.xcarchive PROVISIONING_PROFILE={{ env.BUILD_PROVISION_PROFILE_BASE64 }} clean archive CODE_SIGN_IDENTITY="Apple Distribution: Julio Benjamin Delgado"
       - name: Export ipa
         run: xcodebuild -exportArchive -archivePath build-output/app.xcarchive -exportPath build-output/ios -exportOptionsPlist ios/ExportOptions.plist
 
