commented pod install

--- a/.github/workflows/ios_CI_CD_TEST.yml
+++ b/.github/workflows/ios_CI_CD_TEST.yml
@@ -65,8 +65,8 @@ jobs:
 
       - name: Restore packages
         run: flutter pub get
-      - name: pod Install
-        run: pod install
+      # - name: pod Install
+      #   run: pod install
 
       - name: Build Flutter
         run: flutter build ios --release --no-codesign
