--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,30 +5,27 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
-
-  # create pdf document
-  pdf: ^3.1.0
-
-  # save file
-  path_provider: ^2.0.1
-
-  # open pdf document
-  open_file: ^3.2.1
-
-  # format dates for invoice
+  get: ^4.1.3
   intl: ^0.17.0
+  logger: ^1.0.0
+  
+  open_file: ^3.2.1
+  path_provider: ^2.0.1
+  pdf: ^3.1.0
+  rive: ^0.7.30
+  google_mobile_ads: ^1.3.0
+
 
 dev_dependencies:
-
   change_app_package_name: ^1.1.0
   flutter_test:
     sdk: flutter
 
-
-
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
