--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   pdf: ^3.1.0
   rive: ^0.7.30
   google_mobile_ads: ^1.3.0
+  shared_preferences: ^2.0.15
+  image_picker: ^0.8.5+3
+  syncfusion_flutter_pdf: ^19.4.40-beta
+  jiffy: ^5.0.0
+
 
 
 dev_dependencies:
